2005-04-05  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsBSDDB.py (upgrade_5): Make work with half-upgraded data.

2005-04-05  Don Allingham  <don@gramps-project.org>
	* src/DbPrompter.py: provide a better error message of DB open failure
	* src/const.py.in: Add Martin Hawlisch and Richard Tayor to author list

2005-04-05  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/PedView.py: Show Baptism/Burial as fallback for birth/death; Moved text
	generation for details view out of DispBox class so that PedigreeView can use the
	same string for max size calculation.
	* src/PeopleModel.py: Show Baptism/Burial as fallback for birth/death. Based on
	patch from Jim Smart.
	* src/PeopleView.py: Enable makup that PeopleModel can render fallback data in italics.

2005-04-01  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/GrampsDBCallback.py: added support for disconnecting callbacks,
	better test code and lots of logging. Improved the comments.
	
2005-04-04  Alex Roitman  <shura@gramps-project.org>
	* src/Marriage.py: proper window management on delete event.
	* src/RelLib.py (Event.are_equal): Correction.
	* src/Date.py (is_empty): Require empty text for a date to be empty.
	* src/WriteXML (write_object): Remove places from Media.
	* src/GrampsDbBase.py (undo): Typos.
	* src/GrampsDBCallback: Pretty printing for warnings.

2005-04-04  Don Allingham  <don@gramps-project.org>
	* src/ChooseParents.py: fix father/mother relationship
	* src/FamilyView.py: fix update of child pointers after add
	* src/PeopleView.py: unselect previous entry on new goto_active_person
	* src/MediaView.py: pass handle instead of GRAMPS ID during drag-n-drop
	* src/GrampsBSDDB.py: remove transaction.batch in favor of signal suppression
	* src/GrampsDbBase.py: remove transaction.batch in favor of signal suppression
	* src/GrampsInMemDB.py: remove transaction.batch in favor of signal suppression
	* src/ReadGedcom.py: fix relation typo, enable/disable signals around import 